--- a/assignments.html
+++ b/assignments.html
@@ -22,7 +22,7 @@
     <section>
         <h2>Assignment 0</h2>
         <p>A Python script that adds two numbers together.</p>
-        <a href="#">GitHub Link</a>
+        <a href="https://github.com/wasay28/wasay28-assignment-0">Github Link</a>
     </section>
 </body>
 </html>
