--- a/assignments.html
+++ b/assignments.html
@@ -23,6 +23,9 @@
         <h2>Assignment 0</h2>
         <p>A Python script that adds two numbers together.</p>
         <a href="https://github.com/wasay28/wasay28-assignment-0">Github Link</a>
+        <h2>Assignment 1</h2>
+        <p>Data Collection and Analysis.</p>
+        <a href="https://github.com/wasay28/wasay28-assignment-1">Github Link</a>
     </section>
 </body>
 </html>
