added link to assignment 2

--- a/assignments.html
+++ b/assignments.html
@@ -26,6 +26,9 @@
         <h2>Assignment 1</h2>
         <p>Data Collection and Analysis.</p>
         <a href="https://github.com/wasay28/wasay28-assignment-1">Github Link</a>
+        <h2>Assignment 2</h2>
+        <p>K-Means Clustering Visualization Webpage</p>
+        <a href="https://github.com/wasay28/wasay28-assignment-2">Github Link</a>
     </section>
 </body>
 </html>
