--- a/assignments.html
+++ b/assignments.html
@@ -27,7 +27,7 @@
         <p>Data Collection and Analysis.</p>
         <a href="https://github.com/wasay28/wasay28-assignment-1">Github Link</a>
         <h2>Assignment 2</h2>
-        <p>K-Means Clustering Visualization Webpage</p>
+        <p>K-Means Clustering Visualization Webpage. <a href="https://youtu.be/4FxrKWynyxE">Demo Video YouTube Link</a></p>
         <a href="https://github.com/wasay28/wasay28-assignment-2">Github Link</a>
     </section>
 </body>
