added assignment 3 link

--- a/assignments.html
+++ b/assignments.html
@@ -29,6 +29,9 @@
         <h2>Assignment 2</h2>
         <p>K-Means Clustering Visualization Webpage. <a href="https://youtu.be/4FxrKWynyxE">Demo Video YouTube Link</a></p>
         <a href="https://github.com/wasay28/wasay28-assignment-2">Github Link</a>
+        <h2>Assignment 3</h2>
+        <p>Singular Value Decomposition (SVD) Algorithm Python Notebook</p>
+        <a href="https://github.com/wasay28/wasay28-assignment-3">Github Link</a>
     </section>
 </body>
 </html>
