--- a/assignments.html
+++ b/assignments.html
@@ -32,6 +32,9 @@
         <h2>Assignment 3</h2>
         <p>Singular Value Decomposition (SVD) Algorithm Python Notebook</p>
         <a href="https://github.com/wasay28/wasay28-assignment-3">Github Link</a>
+        <h2>Assignment 4</h2>
+        <p>Latent Semantic Analysis (LSA) Search Engine Webpage, Demo Video Youtube Link:</p>
+        <a href="https://github.com/wasay28/wasay28-assignment-4">Github Link</a>
     </section>
 </body>
 </html>
