--- a/assignments.html
+++ b/assignments.html
@@ -33,7 +33,7 @@
         <p>Singular Value Decomposition (SVD) Algorithm Python Notebook</p>
         <a href="https://github.com/wasay28/wasay28-assignment-3">Github Link</a>
         <h2>Assignment 4</h2>
-        <p>Latent Semantic Analysis (LSA) Search Engine Webpage, Demo Video Youtube Link:</p>
+        <p>Latent Semantic Analysis (LSA) Search Engine Webpage <a href="https://youtu.be/pzN5QVHYOgk">Demo Video YouTube Link</a></p>
         <a href="https://github.com/wasay28/wasay28-assignment-4">Github Link</a>
     </section>
 </body>
