--- a/assignments.html
+++ b/assignments.html
@@ -35,6 +35,9 @@
         <h2>Assignment 4</h2>
         <p>Latent Semantic Analysis (LSA) Search Engine Webpage. <a href="https://youtu.be/pzN5QVHYOgk">Demo Video YouTube Link</a></p>
         <a href="https://github.com/wasay28/wasay28-assignment-4">Github Link</a>
+        <h2>Assignment 5</h2>
+        <p>K-Nearest Neighbors Kaggle Competition</p>
+        <a href="https://github.com/wasay28/wasay28-assignment-5">Github Link</a>
     </section>
 </body>
 </html>
