midterm github link

--- a/assignments.html
+++ b/assignments.html
@@ -38,6 +38,9 @@
         <h2>Assignment 5</h2>
         <p>K-Nearest Neighbors Kaggle Competition</p>
         <a href="https://github.com/wasay28/wasay28-assignment-5">Github Link</a>
+        <h2>Midterm</h2>
+        <p>CS 506 Midterm</p>
+        <a href="https://github.com/wasay28/wasay28-midterm">Github Link</a>
     </section>
 </body>
 </html>
