assignment 6, still need to attach youtube link

--- a/assignments.html
+++ b/assignments.html
@@ -41,6 +41,9 @@
         <h2>Midterm</h2>
         <p>CS 506 Midterm</p>
         <a href="https://github.com/wasay28/wasay28-midterm">Github Link</a>
+        <h2>Assignment 6</h2>
+        <p>Linear Regression. <a href="">Demo Video YouTube Link</a></p>
+        <a href="https://github.com/wasay28/wasay28-assignment-6">Github Link</a>
     </section>
 </body>
 </html>
