youtube link assignment 6

--- a/assignments.html
+++ b/assignments.html
@@ -42,7 +42,7 @@
         <p>CS 506 Midterm</p>
         <a href="https://github.com/wasay28/wasay28-midterm">Github Link</a>
         <h2>Assignment 6</h2>
-        <p>Linear Regression. <a href="">Demo Video YouTube Link</a></p>
+        <p>Linear Regression. <a href="https://youtu.be/mbu3G3vFSyg">Demo Video YouTube Link</a></p>
         <a href="https://github.com/wasay28/wasay28-assignment-6">Github Link</a>
     </section>
 </body>
