--- a/assignments.html
+++ b/assignments.html
@@ -44,6 +44,9 @@
         <h2>Assignment 6</h2>
         <p>Linear Regression. <a href="https://youtu.be/mbu3G3vFSyg">Demo Video YouTube Link</a></p>
         <a href="https://github.com/wasay28/wasay28-assignment-6">Github Link</a>
+        <h2>Assignment 7</h2>
+        <p>Hypothesis Testing and Confidence Intervals in Linear Regression</p>
+        <a href="https://github.com/wasay28/wasay28-assignment-7">Github Link</a>
     </section>
 </body>
 </html>
