--- a/assignments.html
+++ b/assignments.html
@@ -45,7 +45,7 @@
         <p>Linear Regression. <a href="https://youtu.be/mbu3G3vFSyg">Demo Video YouTube Link</a></p>
         <a href="https://github.com/wasay28/wasay28-assignment-6">Github Link</a>
         <h2>Assignment 7</h2>
-        <p>Hypothesis Testing and Confidence Intervals in Linear Regression. <a href="">Demo Video YouTube Link</a></p>
+        <p>Hypothesis Testing and Confidence Intervals in Linear Regression. <a href="https://youtu.be/kUtMKNggmWI">Demo Video YouTube Link</a></p>
         <a href="https://github.com/wasay28/wasay28-assignment-7">Github Link</a>
     </section>
 </body>
