--- a/assignments.html
+++ b/assignments.html
@@ -48,7 +48,7 @@
         <p>Hypothesis Testing and Confidence Intervals in Linear Regression. <a href="https://youtu.be/kUtMKNggmWI">Demo Video YouTube Link</a></p>
         <a href="https://github.com/wasay28/wasay28-assignment-7">Github Link</a>
         <h2>Assignment 8</h2>
-        <p>Logistic Regression. <a href="">Demo Video YouTube Link</a></p>
+        <p>Logistic Regression. <a href="https://youtu.be/-1-GijHcf9E">Demo Video YouTube Link</a></p>
         <a href="https://github.com/wasay28/wasay28-assignment-8">Github Link</a>
     </section>
 </body>
