--- a/assignments.html
+++ b/assignments.html
@@ -50,6 +50,9 @@
         <h2>Assignment 8</h2>
         <p>Logistic Regression. <a href="https://youtu.be/-1-GijHcf9E">Demo Video YouTube Link</a></p>
         <a href="https://github.com/wasay28/wasay28-assignment-8">Github Link</a>
+        <h2>Assignment 9</h2>
+        <p>Neural Networks. <a href="">Demo Video YouTube Link</a></p>
+        <a href="https://github.com/wasay28/wasay28-assignment-9">Github Link</a>
     </section>
 </body>
 </html>
