assign 9 youtube link

--- a/assignments.html
+++ b/assignments.html
@@ -51,7 +51,7 @@
         <p>Logistic Regression. <a href="https://youtu.be/-1-GijHcf9E">Demo Video YouTube Link</a></p>
         <a href="https://github.com/wasay28/wasay28-assignment-8">Github Link</a>
         <h2>Assignment 9</h2>
-        <p>Neural Networks. <a href="">Demo Video YouTube Link</a></p>
+        <p>Neural Networks. <a href="https://youtu.be/LCF4jP0mrbM">Demo Video YouTube Link</a></p>
         <a href="https://github.com/wasay28/wasay28-assignment-9">Github Link</a>
     </section>
 </body>
