--- a/assignments.html
+++ b/assignments.html
@@ -53,6 +53,9 @@
         <h2>Assignment 9</h2>
         <p>Neural Networks. <a href="https://youtu.be/LCF4jP0mrbM">Demo Video YouTube Link</a></p>
         <a href="https://github.com/wasay28/wasay28-assignment-9">Github Link</a>
+        <h2>Assignment 10</h2>
+        <p>Image Retrieval <a href=>Demo Video YouTube Link</a></p>
+        <a href="https://github.com/wasay28/wasay28-assignment-10">Github Link</a>
     </section>
 </body>
 </html>
